# Vulkana

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: FindVulkan.cmake
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Subsystem.hpp  SubsystemCollection.hpp  Window.cpp  Window.hpp
src/ecs/: Components.hpp  Systems.cpp  Systems.hpp
src/gameplay/: Actor.cpp  Actor.hpp  ActorComponent.hpp
src/networking/: NetworkDriver.cpp  NetworkDriver.hpp  NetworkSystem.cpp  NetworkSystem.hpp
src/renderer/: Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Descriptor.cpp  Descriptor.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Swapchain.cpp  Swapchain.hpp  VMA.cpp  VMA.hpp  VMA_impl.cpp
src/scripting/: ScriptingSubsystem.cpp  ScriptingSubsystem.hpp
src/shaders/: compile.bat  scene.frag  scene.vert  scene.vert.spv
vulkanaGame/: CMakeLists.txt  main.cpp
vulkanaGame/src/: Game.cpp  Game.hpp  GameActors.hpp
vulkanaGame/src/components/: PlayerComponent.hpp
vulkanaGame/src/scenes/: MainScene.hpp
vulkanaGame/src/systems/: PlayerSystem.hpp
